--- a/01-origen/index.html
+++ b/01-origen/index.html
@@ -6,16 +6,6 @@
     <title>Document</title>
 </head>
 <body id="root">
-    <!-- <header>
-        <nav>
-            <ul>
-                <li><a href="/">Inicio</a></li>
-                <li><a href="/nosotros">Nosotros</a></li>
-                <li><a href="/servicios">Servicios</a></li>
-                <li><a href="/contacto">Contacto</a></li>
-            </ul>
-        </nav>
-    </header> -->
-    <script src="libreria.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
